--- a/packages/fastify-vite/package.json
+++ b/packages/fastify-vite/package.json
@@ -18,7 +18,7 @@
     "mode/production.js",
     "plugin.mjs",
     "setup.js",
-    "sharedPaths.mjs",
+    "sharedPaths.cjs",
     "types/index.d.ts",
     "utils.js"
   ],
@@ -46,16 +46,16 @@
   },
   "version": "8.0.0-alpha.1",
   "optionalDependencies": {
-    "@fastify/htmx": "workspace:^",
     "@fastify/react": "workspace:^",
     "@fastify/vue": "workspace:^",
+    "@fastify/htmx": "workspace:^",
     "vite": "^5.4.8"
   },
   "dependencies": {
     "@fastify/middie": "^9.0.2",
     "@fastify/static": "^8.0.1",
     "fastify-plugin": "^5.0.1",
-    "find-cache-dir": "^5.0.0",
+    "find-cache-dir": "^3.3.2",
     "fs-extra": "^10.1.0",
     "html-rewriter-wasm": "^0.4.1",
     "klaw": "^4.1.0"
